src/main/webapp/css/_custom.scss
/** 
    _custom.scss: main config of the flussbad-theme

    Created:    2017-09-07 16:32 by Christian Berndt
    Modified:   2017-12-29 21:28 by Christian Berndt
    Version:    1.1.6
*/
/* These inject tags are used for dynamically creating imports for themelet styles, you can place them where ever you like in this file. */

/* inject:imports */
/* endinject */

/* This file allows you to override default styles in one central location for easier upgrade and maintenance. */

@import "adt";
@import "bs4";
@import "core_portlets";
@import "fonts";
@import "footer";
@import "navigation";
/* responsive  is imported at the end of this file */
@import "templates";
@import "variables";

/* ----------------------------------------------- global settings */

    
a {
    
    color: $navigation-font-color;
    
    &:active,
    &:focus {
        outline-color: transparent ! important;
    }
    
    &:hover, 
    &:focus {    
        text-decoration: none;
        color: $hover-font-color;
    }
}

body {
    color: $default-font-color;
    font-family: $regular-font-family;
    font-size: $default-font-size;
    font-size-adjust: $default-font-size-adjust;
}

#content {
    margin-top: $nav-height; 
}

.control-menu {
    .toggle-controls {
        &.visible-xs {
            display: inline-block ! important;
        }
    }
}

h1 {  
    font-family: $bold-font-family;
    font-size: $h1-font-size;
    line-height: $h1-line-height;
    letter-spacing: 0.02em;             
}

h2 {   
    font-family: $bold-font-family;
    font-size: $h2-font-size;
    line-height: $h2-line-height;
}

h3 {   
    font-family: $medium-font-family;
    font-size: $h3-font-size;
    text-transform: uppercase;
    letter-spacing: $letter-spacing-wide;
}

h1,h2,h3,h4,h5,h6,strong {    
    font-style: normal;
    font-weight: normal;
}

.has-control-menu  {
    #wrapper {
        margin-top: 0 ! important;
    }
}

.modal {
    &.slideshow {
        display: none;
    }
}

.portlet {
    
    h2.portlet-title-text {
        display: none;
    }
}

.signed-in { 
    
    &.controls-visible {
        .portlet-asset-publisher {
            margin-top: 50px;
        }
    }
    
    #navigation {
        margin-top: 50px;
    }
    
    .portlet {
        > .portlet-topper {
            z-index: 1000; 
        }
    }
}

#wrapper {
    padding-top: 0; 
}

@import "responsive";

